Replace Cordel with CordelDto in public api responses. Add new field xilogravuraUrl to DTO. Remove Cordel from openapi spec.
